update image styles for activity page, ensure "full-screen" button is visible & functional

--- a/src/scss/_activity.scss
+++ b/src/scss/_activity.scss
@@ -74,8 +74,14 @@ ActivityPage {
         padding-bottom: calc(#{$bottom-menu-height});
     }
 
-    img {
+    img.richtext-image {
         width: 100%;
+        border-radius: 8px;
+        margin: unset;
+    }
+
+    ImageWrapper .expand-button {
+        right: 1em;
     }
 
     li {
