--- a/src/scss/_lesson.scss
+++ b/src/scss/_lesson.scss
@@ -258,7 +258,8 @@ ResourceArticle LessonFrame {
     }
 }
 
-LessonFrame {
+LessonFrame,
+ActivityPage {
     ImageWrapper {
         position: relative;
 
